--- a/style/normal-style.css
+++ b/style/normal-style.css
@@ -1,62 +1,254 @@
-p, h1, h2, h3, b, i{
-  padding: 0px;
-  margin: 0px;
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i');
+
+p, h1, h2, h3, b, i {
+  padding: 0;
+  margin: 0;
 }
 
 html {
   /*background: url(https://previews.123rf.com/images/hatza/hatza1308/hatza130800506/21394080-Teenage-seamless-background-Stock-Photo.jpg);*/
   /*background: url(http://blogs.walkerart.org/teens/files/2012/11/collabo_drawing_1-337x450.jpg);*/
-  background: url("../image/background.png");
+  /*background: url("../image/background.png");*/
   background-position: center;
   background-size: cover;
+  background: #acb6e5; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #acb6e5, #86fde8); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #acb6e5, #86fde8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
 }
 
 body {
   /*background: url(https://previews.123rf.com/images/hatza/hatza1308/hatza130800506/21394080-Teenage-seamless-background-Stock-Photo.jpg);*/
-  max-width: 940px;
+  max-width: 960px;
   margin: auto;
-  margin-top: 50px;
 }
 
-header{
-
+header {
+  width: 100%;
 }
 
-article, .logo-text{
-
-  background-color: green;
+a {
+  color: #000;
+}
+article {
+  background-color: #eef0f9;
 }
 
-.logo-text{
-  padding-left: 20px;
-  padding-right: 20px;
+.logo-text {
+  text-align: center;
+  padding: 1em 0;
 }
 
-.container{
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+.logo-text h1 {
+  font-weight: 400;
 }
 
-.post, .contact{
-  background-color: red;
+.logo-text p {
+  margin: 1.5em 0;
 }
 
-
-footer{
-  background-color: yellow;
-  bottom: opx;
+.logo {
+  width: 100%;
+  text-align: center;
 }
 
-.logo{
-  background-color: black;
-  width: 250px;
-  height: 250px;
-  margin: 0 auto;
+.logo img {
+  width: 15em;
 }
 
-ul#adminmenu {
-    MARGIN: 0PX;
+.tag {
+  background-color: #000;
+  color: #fff;
+  display: inline-block;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  text-align: center;
 }
 
+.usermenu {
+  background-color: #333;
+  overflow: hidden;
+  width: 100%;
+  text-transform: uppercase;
+}
+
+.usermenu a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  font-size: 1.1em;
+}
+
+.usermenu a:hover {
+  background-color: #ddd;
+  color: #000;
+}
+
+.adminmenu {
+  background-color: #f64c72;
+  overflow: hidden;
+  width: 100%;
+  text-transform: uppercase;
+}
+
+.adminmenu a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  font-size: 1.1em;
+}
+
+.container {
+  padding: 1em 1em;
+}
+
+.post {
+  background-color: #eef0f9;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 0.5em 1em;
+  font-size: 0.8em;
+}
+
+footer a {
+  color: #fff;
+}
+
+.creator {
+  float: right;
+}
+
+.reklama * {
+  max-width: 100%;
+}
+
+.post-container {
+  border: 1px solid #acb6e5;
+  padding: 1.5em;
+  background-color: #e6e9f7;
+  margin-bottom: 1em;
+}
+
+.post-container p {
+  padding-top: 0.4em;
+  padding-bottom: 3em;
+}
+
+.single p, .bloger p, .contact p  {
+  padding: 0.5em 0;
+  text-align: left;
+}
+
+.post-container h1 a, .single h1, .bloger h1, .contact h1, .admin-posts h1, .admin-set h1  {
+  text-decoration: none;
+  color: #000;
+  font-weight: 400;
+  text-align: left;
+}
+
+.post-container h1, .single h1, .bloger h1, .contact h1 .admin-posts h1, .admin-set h1 {
+  margin-bottom: 0.2em;
+}
+
+.datum {
+  font-weight: 700;
+  font-size: 0.8em;
+}
+
+.vice {
+  border: 1px solid #acb6e5;
+  padding: 0.5em 2em;
+  line-height: 1em;
+  text-transform: uppercase;
+  float: right;
+  text-decoration: none;
+  position: relative;
+  top: -2em;
+  color: #000;
+}
+
+.vice:hover {
+  background-color: #86fde8;
+}
+
+input[type=text], input[type=email], input[type=password], select, textarea {
+  width: 100%;
+  padding: 0.8em;
+  border: 1px solid #acb6e5;
+  box-sizing: border-box;
+  margin-top: 0.5em;
+  margin-bottom: 1.3em;
+  resize: vertical;
+  background-color: #e6e9ff;
+}
+
+input[type=submit] {
+  border: 1px solid #acb6e5;
+  padding: 0.5em 2em;
+  line-height: 1em;
+  text-transform: uppercase;
+  float: right;
+  text-decoration: none;
+  color: #000;
+  position: relative;
+}
+
+input[type=submit]:hover {
+  background-color: #86fde8;
+}
+
+.clear {
+  clear: both;
+}
+
+.alert {
+  padding: 1em;
+  background-color: #f44366;
+  color: #fff;
+  opacity: 0.80;
+  transition: opacity 0.6s;
+  margin-bottom: 1.5em;
+}
+
+.zeleny {
+  background-color: #4caf50;
+}
+
+.admin-set h2, .admin-posts h2 {
+  font-size: 1em;
+  font-weight: 400;
+  margin-top: 1em;
+}
+
+.avatar {
+  max-width: 100%;
+}
+
+.bloger {
+  text-align: center;
+}
